src/objects/pymt__Processor_Connection__c.object
<CustomObject>
    <customHelpPage>pymt__Help</customHelpPage>
    <description>Configuration record for each individual PayPal, AuthNet,  eWay and WorldPay account.</description>
    <fields>
        <fullName>pymt__API_Key__c</fullName>
        <label>Deprecated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__API_Password__c</fullName>
        <label>Deprecated</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__API_Username__c</fullName>
        <label>Deprecated</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Account_Type__c</fullName>
        <inlineHelpText>Payment processor account type.</inlineHelpText>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Website Payments Pro</fullName>
                </value>
                <value>
                    <fullName>Website Payments Standard</fullName>
                </value>
                <value>
                    <fullName>AU XML</fullName>
                </value>
                <value>
                    <fullName>AU XML (CVN)</fullName>
                </value>
                <value>
                    <fullName>AU Shared</fullName>
                </value>
                <value>
                    <fullName>AU Shared (CVN)</fullName>
                </value>
                <value>
                    <fullName>NZ Shared</fullName>
                </value>
                <value>
                    <fullName>UK Shared</fullName>
                </value>
                <value>
                    <fullName>AIM</fullName>
                </value>
                <value>
                    <fullName>Business Gateway</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Assigned_to_Terminal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check to enable this payment processor connection in the payment terminal.</inlineHelpText>
        <label>Assigned to Terminal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__AuthNet_Direct_Response_Delim__c</fullName>
        <label>AuthNet Direct Response Delimiter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>|</fullName>
                    <default>true</default>
                    <label>|</label>
                </value>
                <value>
                    <fullName>&apos;</fullName>
                </value>
                <value>
                    <fullName>&quot;</fullName>
                </value>
                <value>
                    <fullName>*</fullName>
                </value>
                <value>
                    <fullName>,</fullName>
                </value>
                <value>
                    <fullName>/</fullName>
                </value>
                <value>
                    <fullName>;</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__AuthNet_Enable_Echecks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AuthNet Enable Echecks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__AuthNet_Login_Id__c</fullName>
        <label>Deprecated</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__AuthNet_Trans_Key__c</fullName>
        <label>AuthNet Transaction Key</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Auto_Attach_Products__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Automatically connect Product records to new shopping cart items using the product code.</inlineHelpText>
        <label>Connect Products to Cart Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Auto_Attach__c</fullName>
        <inlineHelpText>Determines which methods of auto-attaching contact and opportunity records will be used for transactions originating outside of Salesforce.</inlineHelpText>
        <label>Auto Attach</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contact using PayPal Payer Id</fullName>
                </value>
                <value>
                    <fullName>Contact using email</fullName>
                </value>
                <value>
                    <fullName>Opportunity using invoice number</fullName>
                </value>
                <value>
                    <fullName>Opportunity using name</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Auto_Create_Account__c</fullName>
        <inlineHelpText>When auto-creating contacts - this setting determines whether an account should also be created.  &apos;Individual Accounts&apos; are accounts given the same name as the Contact and marked &apos;Convert To Person Account&apos; so they can be batch converted later.</inlineHelpText>
        <label>Auto-Create Account</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Use Default Account</fullName>
                </value>
                <value>
                    <fullName>Create Individual Account</fullName>
                </value>
                <value>
                    <fullName>Create Business Account</fullName>
                </value>
                <value>
                    <fullName>Create Individual or Business Account</fullName>
                </value>
                <value>
                    <fullName>Create Business Account or Use Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Auto_Create_Cart_Items__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Automatically add shopping cart items when receiving a new payment notification with cart item data.</inlineHelpText>
        <label>Auto Create Shopping Cart Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Auto_Create_Contacts__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Create a new contact (using transaction details) if the external transaction cannot be matched up with an existing contact in Salesforce.</inlineHelpText>
        <label>Auto-Create Contacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Category_Split_Expression__c</fullName>
        <description>Optional JSON string defining the suggested Category splits for payments when completed.</description>
        <inlineHelpText>Optional JSON string defining the suggested Category splits for payments when completed.</inlineHelpText>
        <label>Category Split Expression</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pymt__Category_Split_Name__c</fullName>
        <description>This picklist may be edited by the PaymentConnect administrator to add names matching category split settings that have been configured in the PaymentConnect Admin area.</description>
        <inlineHelpText>Category split expression to apply to completed payments that have been processed using this processor connection.  Overrides the application-wide category split settings.</inlineHelpText>
        <label>Category Split Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Don&apos;t Auto-Split</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Custom_Gateway_URL__c</fullName>
        <description>Overrides the payment processor&apos;s default gateway URL(s).</description>
        <inlineHelpText>Overrides the payment processor&apos;s default gateway URL(s).</inlineHelpText>
        <label>Custom Gateway URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Default_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Default Account to use when auto-creating Contacts</inlineHelpText>
        <label>Default Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Processor Connections</relationshipLabel>
        <relationshipName>Processor_Connections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pymt__Default_Connection__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates this connection is the default connection to use inside of Salesforce (when not otherwise specified for an operation).  Use the Sites settings to determine the default processor for Sites web pages.</inlineHelpText>
        <label>Default Connection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Default_Currency__c</fullName>
        <label>Default Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
                <value>
                    <fullName>CZK</fullName>
                </value>
                <value>
                    <fullName>DKK</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>HUF</fullName>
                </value>
                <value>
                    <fullName>ILS</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>MXN</fullName>
                </value>
                <value>
                    <fullName>NOK</fullName>
                </value>
                <value>
                    <fullName>NZD</fullName>
                </value>
                <value>
                    <fullName>PLN</fullName>
                </value>
                <value>
                    <fullName>SEK</fullName>
                </value>
                <value>
                    <fullName>SGD</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Description__c</fullName>
        <inlineHelpText>Description or notes about this payment processor account.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pymt__Direct_Response_Encaps__c</fullName>
        <description>The character that is used to encapsulate the fields in transaction responses from the payment processor.</description>
        <inlineHelpText>The character that is used to encapsulate the fields in transaction responses from the payment processor.</inlineHelpText>
        <label>Direct Response Encaps</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>|</fullName>
                </value>
                <value>
                    <fullName>&quot;</fullName>
                </value>
                <value>
                    <fullName>&apos;</fullName>
                </value>
                <value>
                    <fullName>:</fullName>
                </value>
                <value>
                    <fullName>;</fullName>
                </value>
                <value>
                    <fullName>/</fullName>
                </value>
                <value>
                    <fullName>\</fullName>
                </value>
                <value>
                    <fullName>-</fullName>
                </value>
                <value>
                    <fullName>*</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Enabled_Card_Types__c</fullName>
        <inlineHelpText>Card types to show in payment terminal(s) using this processor connection.  If left empty, a default card type list will be displayed.</inlineHelpText>
        <label>Enabled Card Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visa</fullName>
                </value>
                <value>
                    <fullName>MasterCard</fullName>
                </value>
                <value>
                    <fullName>Amex</fullName>
                </value>
                <value>
                    <fullName>Discover</fullName>
                </value>
                <value>
                    <fullName>Maestro</fullName>
                </value>
                <value>
                    <fullName>Solo</fullName>
                </value>
                <value>
                    <fullName>Diners Club</fullName>
                </value>
                <value>
                    <fullName>JCB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__External_Transactions__c</fullName>
        <inlineHelpText>Preference for handling transactions coming from outside of Salesforce.  Auto Attach will attempt to auto-create relationships between the new payment record and contacts and  opportunities in your Salesforce instance.</inlineHelpText>
        <label>External Transactions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auto Attach</fullName>
                    <default>true</default>
                    <label>Auto Attach</label>
                </value>
                <value>
                    <fullName>Leave Unattached</fullName>
                </value>
                <value>
                    <fullName>Discard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Google_Merchant_Id__c</fullName>
        <label>Deprecated</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Google_Merchant_Key__c</fullName>
        <label>Deprecated</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Installation_Id__c</fullName>
        <inlineHelpText>WorldPay Installation Id</inlineHelpText>
        <label>Installation Id</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Max_Processing_Attempts__c</fullName>
        <description>Used to limit the number of batch processing attempts for payments associated with this processor connection.</description>
        <inlineHelpText>Used to limit the number of batch processing attempts for payments associated with this processor connection.</inlineHelpText>
        <label>Max Processing Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pymt__Merchant_Id__c</fullName>
        <label>Deprecated</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Notification_Relay_Method__c</fullName>
        <label>Relay Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visualforce</fullName>
                    <default>true</default>
                    <label>Visualforce</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Orphaned_Payments__c</fullName>
        <inlineHelpText>This setting determines what should be done with external transactions that cannot be matched to an opportunity or a contact record.</inlineHelpText>
        <label>Unattached External Transactions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Keep</fullName>
                    <default>true</default>
                    <label>Keep</label>
                </value>
                <value>
                    <fullName>Discard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__PP_API_Password__c</fullName>
        <label>Deprecated</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__PP_API_Signature__c</fullName>
        <label>Deprecated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__PP_API_Username__c</fullName>
        <label>Deprecated</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__PP_Merchant_Id__c</fullName>
        <label>Deprecated</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__PaymentConnect_Setup__c</fullName>
        <label>PaymentConnect Settings Record</label>
        <referenceTo>pymt__Settings__c</referenceTo>
        <relationshipLabel>Processor Connections</relationshipLabel>
        <relationshipName>Processor_Connections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>pymt__Post_Verification_Code__c</fullName>
        <label>Deprecated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Process_Scheduled_Payments_LastNDays__c</fullName>
        <description>Window (in days) to search for scheduled payments to process in batch.  Payments outside of this window are not processed.</description>
        <inlineHelpText>Window (in days) to search for scheduled payments to process in batch.  Payments outside of this window are not processed.</inlineHelpText>
        <label>Process Scheduled Payments LastNDays</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pymt__Processor_Id__c</fullName>
        <label>Processor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PayPal</fullName>
                    <default>true</default>
                    <label>PayPal</label>
                </value>
                <value>
                    <fullName>Authorize.Net</fullName>
                </value>
                <value>
                    <fullName>Google</fullName>
                </value>
                <value>
                    <fullName>WorldPay</fullName>
                </value>
                <value>
                    <fullName>eWay</fullName>
                </value>
                <value>
                    <fullName>Stripe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Relay_Id__c</fullName>
        <inlineHelpText>Used to match notifications passing through the relay with the correct processor connection record.  For visualforce relay scripts this is the page name of the relay.  For api relays, this Id is set in the relay&apos;s configuration file.</inlineHelpText>
        <label>Relay Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Relay_Script__c</fullName>
        <label>Relay Script</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pymt__Salesforce_Checkout__c</fullName>
        <description>In cases where the processor supports both API (Native) and hosted (Redirect) checkout options, this setting indicates which method is to be used from payment terminals inside of Salesforce</description>
        <inlineHelpText>In cases where the processor supports both API (Native) and hosted (Redirect) checkout options, this setting indicates which method is to be used from payment terminals inside of Salesforce</inlineHelpText>
        <label>Salesforce Checkout</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Native</fullName>
                </value>
                <value>
                    <fullName>Redirect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Site_Checkout__c</fullName>
        <description>Determines the type of checkout offered in Sites - Native (API), Redirect (hosted at the processor)</description>
        <inlineHelpText>Determines the type of checkout offered in Sites - Native (API), Redirect (hosted at the processor)</inlineHelpText>
        <label>Site Checkout</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Native</fullName>
                </value>
                <value>
                    <fullName>Redirect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pymt__Test_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is a connection to a test or sandbox account.</inlineHelpText>
        <label>Test Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Tokenized_Card_Service_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if tokenized card services are enabled for this processor (e.g. AuthNet CIM)</description>
        <inlineHelpText>Check if tokenized card services are enabled for this processor (e.g. AuthNet CIM)</inlineHelpText>
        <label>Tokenized Card Service Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pymt__Verify_Notifications__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If enabled, requires that each notification pass a verification check before processing.</inlineHelpText>
        <label>Verify Notifications</label>
        <type>Checkbox</type>
    </fields>
    <label>Processor Connection</label>
    <nameField>
        <label>Connection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Processor Connections</pluralLabel>
    <recordTypes>
        <fullName>pymt__ACHWorks</fullName>
        <active>true</active>
        <description>Configure a processor connection between PaymentConnect and ACHWorks</description>
        <label>ACHWorks</label>
    </recordTypes>
    <recordTypes>
        <fullName>pymt__Authorize_Net</fullName>
        <active>true</active>
        <description>Configure a processor connection between PaymentConnect and Authorize.Net.</description>
        <label>Authorize.Net</label>
    </recordTypes>
    <recordTypes>
        <fullName>pymt__Google_Checkout</fullName>
        <active>false</active>
        <description>DEPRECATED: Google Checkout support has been disabled.</description>
        <label>Google Checkout</label>
    </recordTypes>
    <recordTypes>
        <fullName>pymt__PayPal</fullName>
        <active>true</active>
        <description>Configure a processor connection between PaymentConnect and PayPal Payments Pro or PayPal Payments Standard.</description>
        <label>PayPal</label>
    </recordTypes>
    <recordTypes>
        <fullName>pymt__Stripe</fullName>
        <active>true</active>
        <description>Configure a processor connection between PaymentConnect and Stripe.</description>
        <label>Stripe</label>
    </recordTypes>
    <recordTypes>
        <fullName>pymt__WorldPay</fullName>
        <active>true</active>
        <description>Configure a processor connection between PaymentConnect and Worldpay Business Gateway.</description>
        <label>WorldPay</label>
    </recordTypes>
    <recordTypes>
        <fullName>pymt__eWay</fullName>
        <active>true</active>
        <description>Configure a processor connection between PaymentConnect and eWay.</description>
        <label>eWay</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>pymt__Check_Assign_to_Terminal</fullName>
        <active>true</active>
        <description>Prevents users from checking the Assign to Terminal box for certain account types.</description>
        <errorConditionFormula>AND( OR(ISPICKVAL(pymt__Account_Type__c, &quot;Website Payments Standard&quot;),  
ISPICKVAL(pymt__Account_Type__c, &quot;eWay NZ&quot;),
ISPICKVAL(pymt__Account_Type__c, &quot;eWay UK&quot;)),
pymt__Assigned_to_Terminal__c  = true)</errorConditionFormula>
        <errorDisplayField>pymt__Assigned_to_Terminal__c</errorDisplayField>
        <errorMessage>Assigned to Terminal cannot be checked for this account type.  Native terminal transaction are not supported.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pymt__PayPal_Standard_and_Assign_to_Terminal</fullName>
        <active>false</active>
        <description>Replaced by Check_Assign_To_Terminal.</description>
        <errorConditionFormula>False</errorConditionFormula>
        <errorDisplayField>pymt__Assigned_to_Terminal__c</errorDisplayField>
        <errorMessage>Website Payments Standard accounts cannot be assigned to the Payment Terminal</errorMessage>
    </validationRules>
</CustomObject>